BE: add limit for favourites
* Implemented new schema in openAPI
* Limit for non-pro users in config
* Function signatures
* PaymentRequiredException
* Fixed error in favorites if user in not logged in
