# backend/src/requests/favourites/favourites-interface.ts
@@ -1,0 +1,5 @@
+export interface IFavouritesInterface {
+  contentID: string;
+  favouriteUserID: string;
+  favouritesLeft: number;
+}
